--- a/boards/xtensa/esp32/Makefile.board
+++ b/boards/xtensa/esp32/Makefile.board
@@ -1,4 +1,3 @@
-# Default to xt-run but let the user override to xtsc-run if they desire
-# TODO
 EMU_PLATFORM ?=
 DEBUG_SCRIPT :=
+FLASH_SCRIPT := esp32.sh
