--- a/drivers/spi/Makefile
+++ b/drivers/spi/Makefile
@@ -10,5 +10,6 @@ obj-$(CONFIG_SPI_MCUX_DSPI) += spi_mcux_dspi.o
 obj-$(CONFIG_SPI_QMSI) += spi_qmsi.o
 obj-$(CONFIG_SPI_QMSI_SS) += spi_qmsi_ss.o
 obj-$(CONFIG_SPI_STM32) += spi_ll_stm32.o
-
+obj-$(CONFIG_SPI_ESP32) += spi_esp32.o
 obj-$(CONFIG_USERSPACE) += spi_handlers.o
+
